fixed wide toolbuttons on mobile

--- a/src/components/ToolSelector/Toolbar/ToolButton/ToolButton.module.scss
+++ b/src/components/ToolSelector/Toolbar/ToolButton/ToolButton.module.scss
@@ -1,6 +1,9 @@
 @import "../../../../shared/variables.scss";
 
 .ToolButton {
+  padding: 0;
+  text-decoration: none;
+
   width: 64px;
   height: 64px;
   display: inline-block;
@@ -14,7 +17,7 @@
   // text
   text-align: center;
   font-size: 40px;
-  line-height: 64px;
+  line-height: 40px;
   font-weight: bold;
   font-family: "Open Sans", sans-serif;
   color: $clr-vulcan;
