--- a/src/components/ToolSelector/Toolbar/Toolbar.module.scss
+++ b/src/components/ToolSelector/Toolbar/Toolbar.module.scss
@@ -7,16 +7,11 @@
   -moz-border-radius: 8px;
   border-radius: 8px;
   margin-top: -4px;
+  white-space: nowrap;
 }
 
 @media screen and (max-width: 541px) {
   .Toolbar {
     padding: 16px;
-  }
-}
-
-@media screen and (max-width: 321px) {
-  .Toolbar {
-    white-space: nowrap;
   }
 }
